@@ -1,2 +1,2 @@
 1999-03-02 09:44:33 exim x.yz daemon started: pid=pppp, no queue runs, listening for SMTP on port 1225
-1999-03-02 09:44:33 10HmaX-0005vi-00 H=(foobar) [127.0.0.1] F=<userx@test.ex> rejected after DATA: unqualified address not permitted: failing address in "From                                                                                                                                                                                                                              " header is: userx
+1999-03-02 09:44:33 10HmaX-0005vi-00 H=(foobar) [127.0.0.1] F=<userx@test.ex> rejected after DATA: unqualified address not permitted: failing address in "From:" header is: userx
