@@ -1,4 +1,4 @@
-1999-03-02 09:44:33 10HmaX-0005vi-00 H=(foobar) [127.0.0.1] F=<userx@test.ex> rejected after DATA: unqualified address not permitted: failing address in "From                                                                                                                                                                                                                              " header is: userx
+1999-03-02 09:44:33 10HmaX-0005vi-00 H=(foobar) [127.0.0.1] F=<userx@test.ex> rejected after DATA: unqualified address not permitted: failing address in "From:" header is: userx
 Envelope-from: <userx@test.ex>
 Envelope-to: <userx@test.ex>
 P Received: from [127.0.0.1] (helo=foobar)
